*SVN*

* Update TMail to v1.1.0.  Use an updated version of TMail if available.  [mikel]

* Introduce a new base test class for testing Mailers.  ActionMailer::TestCase [Koz]

* Fix silent failure of rxml templates.  #9879 [jstewart]


*2.0.0 [Preview Release]* (September 29th, 2007)

* Fix attachment decoding when using the TMail C extension.  #7861 [orangechicken]

* Increase mail delivery test coverage.  #8692 [kamal]

* Register alternative template engines using ActionMailer::Base.register_template_extension('haml').  #7534 [cwd, Josh Peek]

* Only load ActionController::UrlWriter if ActionController is present [Rick Olson]

* Make sure parsed emails recognized attachments nested inside multipart parts. #6714 [Jamis Buck]

* Allow mailer actions named send by using __send__ internally.  #6467 [iGEL]

* Add assert_emails and assert_no_emails to test the number of emails delivered.  #6479 [Jonathan Viney]
    # Assert total number of emails delivered:
    assert_emails 0
    ContactMailer.deliver_contact
    assert_emails 1

    # Assert number of emails delivered within a block:
    assert_emails 1 do
      post :signup, :name => 'Jonathan'
    end


*1.3.3* (March 12th, 2007)

* Depend on Action Pack 1.13.3


*1.3.2* (February 5th, 2007)

* Deprecate server_settings renaming it to smtp_settings,  add sendmail_settings to allow you to override the arguments to and location of the sendmail executable. [Koz]


*1.3.1* (January 16th, 2007)

* Depend on Action Pack 1.13.1


*1.3.0* (January 16th, 2007)

* Make mime version default to 1.0. closes #2323 [ror@andreas-s.net]

* Make sure quoted-printable text is decoded correctly when only portions of the text are encoded. closes #3154. [jon@siliconcircus.com]

* Make sure DOS newlines in quoted-printable text are normalized to unix newlines before unquoting. closes #4166 and #4452. [Jamis Buck]

* Fixed that iconv decoding should catch InvalidEncoding #3153 [jon@siliconcircus.com]
