@@ -60,13 +60,17 @@ class MailerHelperTest < Test::Unit::TestCase
   end
 
   def setup
-    ActionMailer::Base.delivery_method = :test
+    set_delivery_method :test
     ActionMailer::Base.perform_deliveries = true
     ActionMailer::Base.deliveries = []
 
     @recipient = 'test@localhost'
   end
-
+  
+  def teardown
+    restore_delivery_method
+  end
+  
   def test_use_helper
     mail = HelperMailer.create_use_helper(@recipient)
     assert_match %r{Mr. Joe Person}, mail.encoded
