@@ -45,11 +45,15 @@ end
 
 class RenderHelperTest < Test::Unit::TestCase
   def setup
-    ActionMailer::Base.delivery_method = :test
+    set_delivery_method :test
     ActionMailer::Base.perform_deliveries = true
     ActionMailer::Base.deliveries = []
 
     @recipient = 'test@localhost'
+  end
+
+  def teardown
+    restore_delivery_method
   end
 
   def test_inline_template
@@ -70,11 +74,15 @@ end
 
 class FirstSecondHelperTest < Test::Unit::TestCase
   def setup
-    ActionMailer::Base.delivery_method = :test
+    set_delivery_method :test
     ActionMailer::Base.perform_deliveries = true
     ActionMailer::Base.deliveries = []
 
     @recipient = 'test@localhost'
+  end
+
+  def teardown
+    restore_delivery_method
   end
 
   def test_ordering
